--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "lint": "vendor/bin/phpcs --extensions=php --ignore=vendor/ .",
-    "package": "zip -r wp-laravel-elixir.zip . -x '.git/*'",
+    "package": "zip -r wp-laravel-mix.zip . -x '.git/*'",
     "precommit": "yarn run lint"
   },
   "dependencies": {
